Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones main instrucciones
Rule 2     inicio -> instrucciones main
Rule 3     inicio -> main instrucciones
Rule 4     inicio -> main
Rule 5     main -> FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 6     instrucciones -> instrucciones instruccion
Rule 7     instrucciones -> instruccion
Rule 8     instruccion -> declaracion
Rule 9     instruccion -> imprimir
Rule 10    instruccion -> asignacion
Rule 11    instruccion -> if
Rule 12    instruccion -> match
Rule 13    instruccion -> loop
Rule 14    instruccion -> while
Rule 15    instruccion -> break
Rule 16    instruccion -> return
Rule 17    instruccion -> continue
Rule 18    instruccion -> funciones
Rule 19    instruccion -> llamada_funciones PTCOMA
Rule 20    instruccion -> declaracion_arreglos
Rule 21    instruccion -> declaracion_vector
Rule 22    instruccion -> forin
Rule 23    instruccion -> nativas_vector
Rule 24    declaracion_vector -> LET MUT ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
Rule 25    declaracion_vector -> LET ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
Rule 26    expresion -> VEC NOT CORIZQ expresiones CORDER
Rule 27    expresion -> VVEC DOSPT DOSPT NEW PARIZQ PARDER
Rule 28    expresion -> VVEC DOSPT DOSPT WITH_CAPACITY PARIZQ expresion PARDER
Rule 29    expresion -> nativas_vec
Rule 30    nativas_vec -> ID PTO LEN PARIZQ PARDER
Rule 31    expresion -> ID PTO CAPACITY PARIZQ PARDER
Rule 32    nativas_vector -> ID PTO PUSH PARIZQ expresion PARDER PTCOMA
Rule 33    nativas_vector -> ID PTO INSERT PARIZQ expresion COMA expresion PARDER PTCOMA
Rule 34    nativas_vector -> ID PTO REMOVE PARIZQ expresion PARDER PTCOMA
Rule 35    expresion -> ID PTO REMOVE PARIZQ expresion PARDER
Rule 36    expresion -> ID PTO CONTAINS PARIZQ SIGNOI expresion PARDER
Rule 37    declaracion_arreglos -> LET MUT ID DOSPT tipo_arreglo IGUAL expresion PTCOMA
Rule 38    tipo_arreglo -> CORIZQ tipo_arreglo PTCOMA expresion CORDER
Rule 39    tipo_arreglo -> CORIZQ tipo PTCOMA expresion CORDER
Rule 40    funciones -> FN ID PARIZQ lparametros PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
Rule 41    funciones -> FN ID PARIZQ PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
Rule 42    funciones -> FN ID PARIZQ lparametros PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 43    funciones -> FN ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 44    lparametros -> lparametros COMA lparame
Rule 45    lparametros -> lparame
Rule 46    lparame -> ID DOSPT tipo
Rule 47    lparame -> ID DOSPT SIGNOI MUT tipo_arreglo
Rule 48    llamada_funciones -> ID PARIZQ largumentos PARDER
Rule 49    llamada_funciones -> ID PARIZQ PARDER
Rule 50    largumentos -> largumentos COMA largumento
Rule 51    largumentos -> largumento
Rule 52    largumento -> expresion
Rule 53    largumento -> SIGNOI MUT expresion
Rule 54    imprimir -> PRINTLN NOT PARIZQ expresion COMA expresiones PARDER PTCOMA
Rule 55    imprimir -> PRINTLN NOT PARIZQ expresion PARDER PTCOMA
Rule 56    declaracion -> LET MUT ID DOSPT tipo IGUAL expresion PTCOMA
Rule 57    declaracion -> LET MUT ID IGUAL expresion PTCOMA
Rule 58    declaracion -> LET ID DOSPT tipo IGUAL expresion PTCOMA
Rule 59    declaracion -> LET ID IGUAL expresion PTCOMA
Rule 60    asignacion -> ID IGUAL expresion PTCOMA
Rule 61    asignacion -> ID lindices IGUAL expresion PTCOMA
Rule 62    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER
Rule 63    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER else
Rule 64    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
Rule 65    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
Rule 66    lelseif -> lelseif elseif
Rule 67    lelseif -> elseif
Rule 68    elseif -> ELSE IF expresion LLAVEIZQ instrucciones LLAVEDER
Rule 69    else -> ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 70    match -> MATCH expresion LLAVEIZQ imatch LLAVEDER
Rule 71    imatch -> opmatch COMA dmatch
Rule 72    opmatch -> opmatch COMA cmatch
Rule 73    opmatch -> opmatch COMA rmatch
Rule 74    opmatch -> cmatch
Rule 75    opmatch -> rmatch
Rule 76    cmatch -> bloque_match IGUAL MAYORQUE LLAVEIZQ instrucciones LLAVEDER
Rule 77    cmatch -> bloque_match IGUAL MAYORQUE instruccion
Rule 78    bloque_match -> bloque_match BARRAS expresion
Rule 79    bloque_match -> expresion
Rule 80    dmatch -> GUIONB IGUAL MAYORQUE LLAVEIZQ instrucciones LLAVEDER
Rule 81    dmatch -> GUIONB IGUAL MAYORQUE instruccion
Rule 82    rmatch -> expresion PTO PTO IGUAL expresion IGUAL MAYORQUE rrmatch
Rule 83    rrmatch -> instruccion
Rule 84    rrmatch -> LLAVEIZQ instrucciones LLAVEDER
Rule 85    loop -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 86    while -> WHILE expresion LLAVEIZQ instrucciones LLAVEDER
Rule 87    forin -> FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
Rule 88    forin -> FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER
Rule 89    break -> BREAK PTCOMA
Rule 90    break -> BREAK expresion PTCOMA
Rule 91    continue -> CONTINUE PTCOMA
Rule 92    return -> RETURN expresion PTCOMA
Rule 93    tipo -> I64
Rule 94    tipo -> F64
Rule 95    tipo -> BOOL
Rule 96    tipo -> CHAR
Rule 97    tipo -> STRING
Rule 98    tipo -> USIZE
Rule 99    tipo -> SIGNOI STR
Rule 100   expresiones -> expresiones COMA expresion
Rule 101   expresiones -> expresion
Rule 102   expresion -> ID
Rule 103   expresion -> ENTERO
Rule 104   expresion -> DECIMAL
Rule 105   expresion -> TRUE
Rule 106   expresion -> FALSE
Rule 107   expresion -> tostring
Rule 108   expresion -> toowned
Rule 109   tostring -> CADENA PTO TOSTRING PARIZQ PARDER
Rule 110   toowned -> CADENA PTO TOOWNED PARIZQ PARDER
Rule 111   expresion -> STR
Rule 112   expresion -> CADENA
Rule 113   expresion -> CARACTER
Rule 114   expresion -> expresion MAS expresion
Rule 115   expresion -> expresion MENOS expresion
Rule 116   expresion -> expresion POR expresion
Rule 117   expresion -> expresion DIVIDIDO expresion
Rule 118   expresion -> expresion MODULO expresion
Rule 119   expresion -> tipo DOSPT DOSPT POW PARIZQ expresion COMA expresion PARDER
Rule 120   expresion -> tipo DOSPT DOSPT POWF PARIZQ expresion COMA expresion PARDER
Rule 121   expresion -> expresion IGUALQUE expresion
Rule 122   expresion -> expresion NOIGUALQUE expresion
Rule 123   expresion -> expresion MENORQUE expresion
Rule 124   expresion -> expresion MAYORQUE expresion
Rule 125   expresion -> expresion MENORIQUE expresion
Rule 126   expresion -> expresion MAYORIQUE expresion
Rule 127   expresion -> expresion OR expresion
Rule 128   expresion -> expresion AND expresion
Rule 129   expresion -> MENOS expresion
Rule 130   expresion -> NOT expresion
Rule 131   expresion -> PARIZQ expresion PARDER
Rule 132   expresion -> llamada_funciones
Rule 133   expresion -> CORIZQ expresiones CORDER
Rule 134   expresion -> ID lindices
Rule 135   lindices -> lindices CORIZQ expresion CORDER
Rule 136   lindices -> CORIZQ expresion CORDER
Rule 137   expresion -> if_asig
Rule 138   if_asig -> IF expresion LLAVEIZQ bloque_expresion LLAVEDER
Rule 139   if_asig -> IF expresion LLAVEIZQ bloque_expresion LLAVEDER elsea
Rule 140   if_asig -> IF expresion LLAVEIZQ bloque_expresion LLAVEDER elseifa
Rule 141   if_asig -> IF expresion LLAVEIZQ bloque_expresion LLAVEDER elseifa elsea
Rule 142   elseifa -> elseifa lif
Rule 143   elseifa -> lif
Rule 144   lif -> ELSE IF expresion LLAVEIZQ bloque_expresion LLAVEDER
Rule 145   elsea -> ELSE LLAVEIZQ bloque_expresion LLAVEDER
Rule 146   bloque_expresion -> bloque_expresion PTCOMA expresion
Rule 147   bloque_expresion -> expresion
Rule 148   expresion -> match_asig
Rule 149   match_asig -> MATCH expresion LLAVEIZQ imatch_asig LLAVEDER
Rule 150   imatch_asig -> opmatch_asig COMA dmatch_asig
Rule 151   dmatch_asig -> GUIONB IGUAL MAYORQUE LLAVEIZQ bloque_expresion LLAVEDER
Rule 152   dmatch_asig -> GUIONB IGUAL MAYORQUE expresion
Rule 153   opmatch_asig -> opmatch_asig COMA cmatch_asig
Rule 154   opmatch_asig -> cmatch_asig
Rule 155   cmatch_asig -> bloque_match_asig IGUAL MAYORQUE LLAVEIZQ bloque_expresion LLAVEDER
Rule 156   cmatch_asig -> bloque_match_asig IGUAL MAYORQUE expresion
Rule 157   bloque_match_asig -> bloque_match_asig BARRAS expresion
Rule 158   bloque_match_asig -> expresion
Rule 159   expresion -> loop_asig
Rule 160   loop_asig -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 161   expresion -> PARIZQ expresion AS tipo PARDER

Terminals, with rules where they appear

AND                  : 128
AS                   : 161
BARRAS               : 78 157
BOOL                 : 95
BREAK                : 89 90
CADENA               : 109 110 112
CAPACITY             : 31
CARACTER             : 113
CHAR                 : 96
COMA                 : 33 44 50 54 71 72 73 100 119 120 150 153
CONTAINS             : 36
CONTINUE             : 91
CORDER               : 26 38 39 133 135 136
CORIZQ               : 26 38 39 133 135 136
DECIMAL              : 104
DIVIDIDO             : 117
DOSPT                : 24 25 27 27 28 28 37 46 47 56 58 119 119 120 120
ELSE                 : 68 69 144 145
ENTERO               : 103
F64                  : 94
FALSE                : 106
FN                   : 5 40 41 42 43
FOR                  : 87 88
GUIONB               : 80 81 151 152
I64                  : 93
ID                   : 24 25 30 31 32 33 34 35 36 37 40 41 42 43 46 47 48 49 56 57 58 59 60 61 87 88 102 134
IF                   : 62 63 64 65 68 138 139 140 141 144
IGUAL                : 24 25 37 56 57 58 59 60 61 76 77 80 81 82 82 151 152 155 156
IGUALQUE             : 121
IN                   : 87 88
INSERT               : 33
LEN                  : 30
LET                  : 24 25 37 56 57 58 59
LLAVEDER             : 5 40 41 42 43 62 63 64 65 68 69 70 76 80 84 85 86 87 88 138 139 140 141 144 145 149 151 155 160
LLAVEIZQ             : 5 40 41 42 43 62 63 64 65 68 69 70 76 80 84 85 86 87 88 138 139 140 141 144 145 149 151 155 160
LOOP                 : 85 160
MAIN                 : 5
MAS                  : 114
MATCH                : 70 149
MAYORIQUE            : 126
MAYORQUE             : 24 25 40 41 76 77 80 81 82 124 151 152 155 156
MENORIQUE            : 125
MENORQUE             : 24 25 123
MENOS                : 40 41 115 129
MODULO               : 118
MUT                  : 24 37 47 53 56 57
NEW                  : 27
NOIGUALQUE           : 122
NOT                  : 26 54 55 130
OR                   : 127
PARDER               : 5 27 28 30 31 32 33 34 35 36 40 41 42 43 48 49 54 55 109 110 119 120 131 161
PARIZQ               : 5 27 28 30 31 32 33 34 35 36 40 41 42 43 48 49 54 55 109 110 119 120 131 161
POR                  : 116
POW                  : 119
POWF                 : 120
PRINTLN              : 54 55
PTCOMA               : 19 24 25 32 33 34 37 38 39 54 55 56 57 58 59 60 61 89 90 91 92 146
PTO                  : 30 31 32 33 34 35 36 82 82 88 88 109 110
PUSH                 : 32
REMOVE               : 34 35
RETURN               : 92
SIGNOI               : 36 47 53 99
STR                  : 99 111
STRING               : 97
TOOWNED              : 110
TOSTRING             : 109
TRUE                 : 105
USIZE                : 98
VEC                  : 26
VVEC                 : 24 25 27 28
WHILE                : 86
WITH_CAPACITY        : 28
error                : 

Nonterminals, with rules where they appear

asignacion           : 10
bloque_expresion     : 138 139 140 141 144 145 146 151 155
bloque_match         : 76 77 78
bloque_match_asig    : 155 156 157
break                : 15
cmatch               : 72 74
cmatch_asig          : 153 154
continue             : 17
declaracion          : 8
declaracion_arreglos : 20
declaracion_vector   : 21
dmatch               : 71
dmatch_asig          : 150
else                 : 63 65
elsea                : 139 141
elseif               : 66 67
elseifa              : 140 141 142
expresion            : 24 25 28 32 33 33 34 35 36 37 38 39 52 53 54 55 56 57 58 59 60 61 62 63 64 65 68 70 78 79 82 82 86 87 88 88 90 92 100 101 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 130 131 135 136 138 139 140 141 144 146 147 149 152 156 157 158 161
expresiones          : 26 54 100 133
forin                : 22
funciones            : 18
if                   : 11
if_asig              : 137
imatch               : 70
imatch_asig          : 149
imprimir             : 9
inicio               : 0
instruccion          : 6 7 77 81 83
instrucciones        : 1 1 2 3 5 6 40 41 42 43 62 63 64 65 68 69 76 80 84 85 86 87 88 160
largumento           : 50 51
largumentos          : 48 50
lelseif              : 64 65 66
lif                  : 142 143
lindices             : 61 134 135
llamada_funciones    : 19 132
loop                 : 13
loop_asig            : 159
lparame              : 44 45
lparametros          : 40 42 44
main                 : 1 2 3 4
match                : 12
match_asig           : 148
nativas_vec          : 29
nativas_vector       : 23
opmatch              : 71 72 73
opmatch_asig         : 150 153
return               : 16
rmatch               : 73 75
rrmatch              : 82
tipo                 : 24 25 39 40 41 46 56 58 119 120 161
tipo_arreglo         : 37 38 47
toowned              : 108
tostring             : 107
while                : 14

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones main instrucciones
    (2) inicio -> . instrucciones main
    (3) inicio -> . main instrucciones
    (4) inicio -> . main
    (6) instrucciones -> . instrucciones instruccion
    (7) instrucciones -> . instruccion
    (5) main -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) instruccion -> . declaracion
    (9) instruccion -> . imprimir
    (10) instruccion -> . asignacion
    (11) instruccion -> . if
    (12) instruccion -> . match
    (13) instruccion -> . loop
    (14) instruccion -> . while
    (15) instruccion -> . break
    (16) instruccion -> . return
    (17) instruccion -> . continue
    (18) instruccion -> . funciones
    (19) instruccion -> . llamada_funciones PTCOMA
    (20) instruccion -> . declaracion_arreglos
    (21) instruccion -> . declaracion_vector
    (22) instruccion -> . forin
    (23) instruccion -> . nativas_vector
    (56) declaracion -> . LET MUT ID DOSPT tipo IGUAL expresion PTCOMA
    (57) declaracion -> . LET MUT ID IGUAL expresion PTCOMA
    (58) declaracion -> . LET ID DOSPT tipo IGUAL expresion PTCOMA
    (59) declaracion -> . LET ID IGUAL expresion PTCOMA
    (54) imprimir -> . PRINTLN NOT PARIZQ expresion COMA expresiones PARDER PTCOMA
    (55) imprimir -> . PRINTLN NOT PARIZQ expresion PARDER PTCOMA
    (60) asignacion -> . ID IGUAL expresion PTCOMA
    (61) asignacion -> . ID lindices IGUAL expresion PTCOMA
    (62) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (63) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER else
    (64) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (65) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (70) match -> . MATCH expresion LLAVEIZQ imatch LLAVEDER
    (85) loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (86) while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (89) break -> . BREAK PTCOMA
    (90) break -> . BREAK expresion PTCOMA
    (92) return -> . RETURN expresion PTCOMA
    (91) continue -> . CONTINUE PTCOMA
    (40) funciones -> . FN ID PARIZQ lparametros PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (41) funciones -> . FN ID PARIZQ PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (42) funciones -> . FN ID PARIZQ lparametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) funciones -> . FN ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (48) llamada_funciones -> . ID PARIZQ largumentos PARDER
    (49) llamada_funciones -> . ID PARIZQ PARDER
    (37) declaracion_arreglos -> . LET MUT ID DOSPT tipo_arreglo IGUAL expresion PTCOMA
    (24) declaracion_vector -> . LET MUT ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (25) declaracion_vector -> . LET ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (87) forin -> . FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
    (88) forin -> . FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER
    (32) nativas_vector -> . ID PTO PUSH PARIZQ expresion PARDER PTCOMA
    (33) nativas_vector -> . ID PTO INSERT PARIZQ expresion COMA expresion PARDER PTCOMA
    (34) nativas_vector -> . ID PTO REMOVE PARIZQ expresion PARDER PTCOMA

    FN              shift and go to state 5
    LET             shift and go to state 22
    PRINTLN         shift and go to state 24
    ID              shift and go to state 23
    IF              shift and go to state 25
    MATCH           shift and go to state 26
    LOOP            shift and go to state 27
    WHILE           shift and go to state 28
    BREAK           shift and go to state 29
    RETURN          shift and go to state 30
    CONTINUE        shift and go to state 31
    FOR             shift and go to state 32

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    main                           shift and go to state 3
    instruccion                    shift and go to state 4
    declaracion                    shift and go to state 6
    imprimir                       shift and go to state 7
    asignacion                     shift and go to state 8
    if                             shift and go to state 9
    match                          shift and go to state 10
    loop                           shift and go to state 11
    while                          shift and go to state 12
    break                          shift and go to state 13
    return                         shift and go to state 14
    continue                       shift and go to state 15
    funciones                      shift and go to state 16
    llamada_funciones              shift and go to state 17
    declaracion_arreglos           shift and go to state 18
    declaracion_vector             shift and go to state 19
    forin                          shift and go to state 20
    nativas_vector                 shift and go to state 21

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones . main instrucciones
    (2) inicio -> instrucciones . main
    (6) instrucciones -> instrucciones . instruccion
    (5) main -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) instruccion -> . declaracion
    (9) instruccion -> . imprimir
    (10) instruccion -> . asignacion
    (11) instruccion -> . if
    (12) instruccion -> . match
    (13) instruccion -> . loop
    (14) instruccion -> . while
    (15) instruccion -> . break
    (16) instruccion -> . return
    (17) instruccion -> . continue
    (18) instruccion -> . funciones
    (19) instruccion -> . llamada_funciones PTCOMA
    (20) instruccion -> . declaracion_arreglos
    (21) instruccion -> . declaracion_vector
    (22) instruccion -> . forin
    (23) instruccion -> . nativas_vector
    (56) declaracion -> . LET MUT ID DOSPT tipo IGUAL expresion PTCOMA
    (57) declaracion -> . LET MUT ID IGUAL expresion PTCOMA
    (58) declaracion -> . LET ID DOSPT tipo IGUAL expresion PTCOMA
    (59) declaracion -> . LET ID IGUAL expresion PTCOMA
    (54) imprimir -> . PRINTLN NOT PARIZQ expresion COMA expresiones PARDER PTCOMA
    (55) imprimir -> . PRINTLN NOT PARIZQ expresion PARDER PTCOMA
    (60) asignacion -> . ID IGUAL expresion PTCOMA
    (61) asignacion -> . ID lindices IGUAL expresion PTCOMA
    (62) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (63) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER else
    (64) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (65) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (70) match -> . MATCH expresion LLAVEIZQ imatch LLAVEDER
    (85) loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (86) while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (89) break -> . BREAK PTCOMA
    (90) break -> . BREAK expresion PTCOMA
    (92) return -> . RETURN expresion PTCOMA
    (91) continue -> . CONTINUE PTCOMA
    (40) funciones -> . FN ID PARIZQ lparametros PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (41) funciones -> . FN ID PARIZQ PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (42) funciones -> . FN ID PARIZQ lparametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) funciones -> . FN ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (48) llamada_funciones -> . ID PARIZQ largumentos PARDER
    (49) llamada_funciones -> . ID PARIZQ PARDER
    (37) declaracion_arreglos -> . LET MUT ID DOSPT tipo_arreglo IGUAL expresion PTCOMA
    (24) declaracion_vector -> . LET MUT ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (25) declaracion_vector -> . LET ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (87) forin -> . FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
    (88) forin -> . FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER
    (32) nativas_vector -> . ID PTO PUSH PARIZQ expresion PARDER PTCOMA
    (33) nativas_vector -> . ID PTO INSERT PARIZQ expresion COMA expresion PARDER PTCOMA
    (34) nativas_vector -> . ID PTO REMOVE PARIZQ expresion PARDER PTCOMA

    FN              shift and go to state 5
    LET             shift and go to state 22
    PRINTLN         shift and go to state 24
    ID              shift and go to state 23
    IF              shift and go to state 25
    MATCH           shift and go to state 26
    LOOP            shift and go to state 27
    WHILE           shift and go to state 28
    BREAK           shift and go to state 29
    RETURN          shift and go to state 30
    CONTINUE        shift and go to state 31
    FOR             shift and go to state 32

    main                           shift and go to state 33
    instruccion                    shift and go to state 34
    declaracion                    shift and go to state 6
    imprimir                       shift and go to state 7
    asignacion                     shift and go to state 8
    if                             shift and go to state 9
    match                          shift and go to state 10
    loop                           shift and go to state 11
    while                          shift and go to state 12
    break                          shift and go to state 13
    return                         shift and go to state 14
    continue                       shift and go to state 15
    funciones                      shift and go to state 16
    llamada_funciones              shift and go to state 17
    declaracion_arreglos           shift and go to state 18
    declaracion_vector             shift and go to state 19
    forin                          shift and go to state 20
    nativas_vector                 shift and go to state 21

state 3

    (3) inicio -> main . instrucciones
    (4) inicio -> main .
    (6) instrucciones -> . instrucciones instruccion
    (7) instrucciones -> . instruccion
    (8) instruccion -> . declaracion
    (9) instruccion -> . imprimir
    (10) instruccion -> . asignacion
    (11) instruccion -> . if
    (12) instruccion -> . match
    (13) instruccion -> . loop
    (14) instruccion -> . while
    (15) instruccion -> . break
    (16) instruccion -> . return
    (17) instruccion -> . continue
    (18) instruccion -> . funciones
    (19) instruccion -> . llamada_funciones PTCOMA
    (20) instruccion -> . declaracion_arreglos
    (21) instruccion -> . declaracion_vector
    (22) instruccion -> . forin
    (23) instruccion -> . nativas_vector
    (56) declaracion -> . LET MUT ID DOSPT tipo IGUAL expresion PTCOMA
    (57) declaracion -> . LET MUT ID IGUAL expresion PTCOMA
    (58) declaracion -> . LET ID DOSPT tipo IGUAL expresion PTCOMA
    (59) declaracion -> . LET ID IGUAL expresion PTCOMA
    (54) imprimir -> . PRINTLN NOT PARIZQ expresion COMA expresiones PARDER PTCOMA
    (55) imprimir -> . PRINTLN NOT PARIZQ expresion PARDER PTCOMA
    (60) asignacion -> . ID IGUAL expresion PTCOMA
    (61) asignacion -> . ID lindices IGUAL expresion PTCOMA
    (62) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (63) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER else
    (64) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (65) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (70) match -> . MATCH expresion LLAVEIZQ imatch LLAVEDER
    (85) loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (86) while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (89) break -> . BREAK PTCOMA
    (90) break -> . BREAK expresion PTCOMA
    (92) return -> . RETURN expresion PTCOMA
    (91) continue -> . CONTINUE PTCOMA
    (40) funciones -> . FN ID PARIZQ lparametros PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (41) funciones -> . FN ID PARIZQ PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (42) funciones -> . FN ID PARIZQ lparametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) funciones -> . FN ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (48) llamada_funciones -> . ID PARIZQ largumentos PARDER
    (49) llamada_funciones -> . ID PARIZQ PARDER
    (37) declaracion_arreglos -> . LET MUT ID DOSPT tipo_arreglo IGUAL expresion PTCOMA
    (24) declaracion_vector -> . LET MUT ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (25) declaracion_vector -> . LET ID DOSPT VVEC MENORQUE tipo MAYORQUE IGUAL expresion PTCOMA
    (87) forin -> . FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
    (88) forin -> . FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER
    (32) nativas_vector -> . ID PTO PUSH PARIZQ expresion PARDER PTCOMA
    (33) nativas_vector -> . ID PTO INSERT PARIZQ expresion COMA expresion PARDER PTCOMA
    (34) nativas_vector -> . ID PTO REMOVE PARIZQ expresion PARDER PTCOMA

    $end            reduce using rule 4 (inicio -> main .)
    LET             shift and go to state 22
    PRINTLN         shift and go to state 24
    ID              shift and go to state 23
    IF              shift and go to state 25
    MATCH           shift and go to state 26
    LOOP            shift and go to state 27
    WHILE           shift and go to state 28
    BREAK           shift and go to state 29
    RETURN          shift and go to state 30
    CONTINUE        shift and go to state 31
    FN              shift and go to state 36
    FOR             shift and go to state 32

    instrucciones                  shift and go to state 35
    instruccion                    shift and go to state 4
    declaracion                    shift and go to state 6
    imprimir                       shift and go to state 7
    asignacion                     shift and go to state 8
    if                             shift and go to state 9
    match                          shift and go to state 10
    loop                           shift and go to state 11
    while                          shift and go to state 12
    break                          shift and go to state 13
    return                         shift and go to state 14
    continue                       shift and go to state 15
    funciones                      shift and go to state 16
    llamada_funciones              shift and go to state 17
    declaracion_arreglos           shift and go to state 18
    declaracion_vector             shift and go to state 19
    forin                          shift and go to state 20
    nativas_vector                 shift and go to state 21

state 4

    (7) instrucciones -> instruccion .

    FN              reduce using rule 7 (instrucciones -> instruccion .)
    LET             reduce using rule 7 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 7 (instrucciones -> instruccion .)
    ID              reduce using rule 7 (instrucciones -> instruccion .)
    IF              reduce using rule 7 (instrucciones -> instruccion .)
    MATCH           reduce using rule 7 (instrucciones -> instruccion .)
    LOOP            reduce using rule 7 (instrucciones -> instruccion .)
    WHILE           reduce using rule 7 (instrucciones -> instruccion .)
    BREAK           reduce using rule 7 (instrucciones -> instruccion .)
    RETURN          reduce using rule 7 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 7 (instrucciones -> instruccion .)
    FOR             reduce using rule 7 (instrucciones -> instruccion .)
    $end            reduce using rule 7 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 7 (instrucciones -> instruccion .)


state 5

    (5) main -> FN . MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (40) funciones -> FN . ID PARIZQ lparametros PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (41) funciones -> FN . ID PARIZQ PARDER MENOS MAYORQUE tipo LLAVEIZQ instrucciones LLAVEDER
    (42) funciones -> FN . ID PARIZQ lparametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) funciones -> FN . ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER

    MAIN            shift and go to state 37
    ID              shift and go to state 38


state 6

    (8) instruccion -> declaracion .

    FN              reduce using rule 8 (instruccion -> declaracion .)
    LET             reduce using rule 8 (instruccion -> declaracion .)
    PRINTLN         reduce using rule 8 (instruccion -> declaracion .)
    ID              reduce using rule 8 (instruccion -> declaracion .)
    IF              reduce using rule 8 (instruccion -> declaracion .)
    MATCH           reduce using rule 8 (instruccion -> declaracion .)
    LOOP            reduce using rule 8 (instruccion -> declaracion .)
    WHILE           reduce using rule 8 (instruccion -> declaracion .)
    BREAK           reduce using rule 8 (instruccion -> declaracion .)
    RETURN          reduce using rule 8 (instruccion -> declaracion .)
    CONTINUE        reduce using rule 8 (instruccion -> declaracion .)
    FOR             reduce using rule 8 (instruccion -> declaracion .)
    $end            reduce using rule 8 (instruccion -> declaracion .)
    LLAVEDER        reduce using rule 8 (instruccion -> declaracion .)
    COMA            reduce using rule 8 (instruccion -> declaracion .)


state 7

    (9) instruccion -> imprimir .

    FN              reduce using rule 9 (instruccion -> imprimir .)
    LET             reduce using rule 9 (instruccion -> imprimir .)
    PRINTLN         reduce using rule 9 (instruccion -> imprimir .)
    ID              reduce using rule 9 (instruccion -> imprimir .)
    IF              reduce using rule 9 (instruccion -> imprimir .)
    MATCH           reduce using rule 9 (instruccion -> imprimir .)
    LOOP            reduce using rule 9 (instruccion -> imprimir .)
    WHILE           reduce using rule 9 (instruccion -> imprimir .)
    BREAK           reduce using rule 9 (instruccion -> imprimir .)
    RETURN          reduce using rule 9 (instruccion -> imprimir .)
